Fix textarea width on small resolution

--- a/style.css
+++ b/style.css
@@ -229,4 +229,5 @@ textarea {
   display: flex;
   align-self: self-end;
   height: 10%;
+  width: 100%;
 }
